parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AMPERSANT
    AND
    ARRAY
    ASSIGN
    CALLABLE
    CATH
    CLASS
    CLONE
    COMILLASDOBLES
    COMILLASIMPLE
    CONST
    CONTINUE
    DECLARE
    DIE
    DO
    DOLLAR
    DOT
    EMPTY
    ENDDECLARE
    ENDFOR
    ENDFOREACH
    ENDIF
    ENDSWITCH
    ENDWHILE
    EVAL
    EXIT
    EXTENDS
    FINAL
    FINALLY
    FN
    GLOBAL
    GOTO
    HASHTAG
    ID
    IMPLEMENTS
    INCLUDE
    INCLUDE_ONCE
    INSTANCEOF
    INSTEADOF
    INTERFACE
    ISSET
    LIST
    MATCH
    MINUSEQUAL
    MOD
    NAMESPACE
    NEW
    OR
    PLUSEQUAL
    PRINT
    PRIVATE
    PROTECTED
    PUBLIC
    REQUIRE
    REQUIRE_ONCE
    STATIC
    THIS
    THROW
    TRAIT
    TRY
    UNSET
    USE
    VAR
    XOR

Grammar

Rule 0     S' -> program
Rule 1     program -> header_declaration declaration_list footer_declaration
Rule 2     declaration_list -> declaration_list declaration
Rule 3     declaration_list -> declaration
Rule 4     declaration -> var_declaration
Rule 5     declaration -> selection_stmt
Rule 6     declaration -> iteration_stmt
Rule 7     declaration -> fun_declaration
Rule 8     declaration -> show_in_screen
Rule 9     declaration -> expression_stmt
Rule 10    header_declaration -> LESS QUESTIONMARK PHP
Rule 11    footer_declaration -> QUESTIONMARK GREATER
Rule 12    show_in_screen -> ECHO var_val SEMICOLON
Rule 13    show_in_screen -> ECHO CADENA1 SEMICOLON
Rule 14    show_in_screen -> ECHO selection_stmt
Rule 15    var_declaration -> var_declaration2 SEMICOLON
Rule 16    var_declaration -> VARIABLE LBRACKET NUMBER RBRACKET SEMICOLON
Rule 17    var_declaration2 -> VARIABLE
Rule 18    var_declaration2 -> VARIABLE COMMA var_declaration2
Rule 19    var_declaration2 -> VARIABLE EQUAL NUMBER COMMA var_declaration2
Rule 20    var_declaration2 -> VARIABLE EQUAL NUMBER
Rule 21    var_declaration2 -> VARIABLE EQUAL VARIABLE COMMA var_declaration2
Rule 22    var_declaration2 -> VARIABLE EQUAL VARIABLE
Rule 23    var_declaration2 -> COMMA
Rule 24    var_declaration2 -> VARIABLE EQUAL VARIABLE simple_expression
Rule 25    var_declaration2 -> VARIABLE EQUAL LBRACKET NUMBER COMMA var_declaration2
Rule 26    var_declaration2 -> NUMBER COMMA var_declaration2
Rule 27    var_declaration2 -> NUMBER RBRACKET
Rule 28    var_declaration2 -> VARIABLE EQUAL LBRACKET CADENA1 COMMA var_declaration2
Rule 29    var_declaration2 -> CADENA1 COMMA var_declaration2
Rule 30    var_declaration2 -> CADENA1 RBRACKET
Rule 31    fun_declaration -> FUNCTION VARIABLE2 LPAREN params RPAREN statement
Rule 32    params -> param_list
Rule 33    param_list -> param_list COMMA param
Rule 34    param_list -> param
Rule 35    param -> VARIABLE
Rule 36    param -> VARIABLE LBRACKET RBRACKET
Rule 37    param -> empty_function
Rule 38    compount_stmt -> LBLOCK local_declarations statement_list RBLOCK
Rule 39    local_declarations -> var_declaration
Rule 40    local_declarations -> empty_function
Rule 41    statement_list -> statement_list statement
Rule 42    statement_list -> statement
Rule 43    statement_list -> empty_function
Rule 44    statement -> expression_stmt
Rule 45    statement -> compount_stmt
Rule 46    statement -> selection_stmt
Rule 47    statement -> iteration_stmt
Rule 48    statement -> show_in_screen
Rule 49    statement -> return_stmt
Rule 50    expression_stmt -> expression SEMICOLON
Rule 51    expression_stmt -> SEMICOLON
Rule 52    selection_stmt -> IF LPAREN expression RPAREN statement
Rule 53    selection_stmt -> IF LPAREN expression RPAREN statement ELSE statement
Rule 54    selection_stmt -> IF LPAREN expression RPAREN statement ELSEIF statement
Rule 55    selection_stmt -> SWITCH LPAREN var_val RPAREN statement
Rule 56    selection_stmt -> CASE NUMBER COLON statement BREAK SEMICOLON
Rule 57    selection_stmt -> DEFAULT COLON statement BREAK SEMICOLON
Rule 58    selection_stmt -> VARIABLE relop VARIABLE QUESTIONMARK expression COLON expression SEMICOLON
Rule 59    iteration_stmt -> WHILE LPAREN expression RPAREN statement
Rule 60    iteration_stmt -> FOR LPAREN var_declaration2 SEMICOLON expression SEMICOLON additive_expression RPAREN statement
Rule 61    iteration_stmt -> FOREACH LPAREN var_val AS var_val RPAREN statement
Rule 62    return_stmt -> RETURN SEMICOLON
Rule 63    return_stmt -> RETURN expression SEMICOLON
Rule 64    expression -> var_val EQUAL expression
Rule 65    expression -> simple_expression
Rule 66    var_val -> VARIABLE
Rule 67    var_val -> VARIABLE LBRACKET expression RBRACKET
Rule 68    simple_expression -> additive_expression relop additive_expression
Rule 69    simple_expression -> additive_expression
Rule 70    relop -> LESS
Rule 71    relop -> LESSEQUAL
Rule 72    relop -> GREATER
Rule 73    relop -> GREATEREQUAL
Rule 74    relop -> DEQUAL
Rule 75    relop -> DISTINT
Rule 76    relop -> ISEQUAL
Rule 77    additive_expression -> additive_expression addop term
Rule 78    additive_expression -> term
Rule 79    additive_expression -> term MINUSMINUS
Rule 80    additive_expression -> term PLUSPLUS
Rule 81    additive_expression -> addop term
Rule 82    addop -> PLUS
Rule 83    addop -> MINUS
Rule 84    term -> term mulop factor
Rule 85    term -> factor
Rule 86    term -> CADENA1
Rule 87    term -> CADENA2
Rule 88    mulop -> TIMES
Rule 89    mulop -> DIVIDE
Rule 90    factor -> LPAREN expression RPAREN
Rule 91    factor -> var_val
Rule 92    factor -> call
Rule 93    factor -> NUMBER
Rule 94    call -> VARIABLE2 LPAREN args RPAREN
Rule 95    args -> args_list
Rule 96    args -> empty_function
Rule 97    args_list -> args_list COMMA expression
Rule 98    args_list -> expression
Rule 99    empty_function -> <empty>

Terminals, with rules where they appear

AMPERSANT            : 
AND                  : 
ARRAY                : 
AS                   : 61
ASSIGN               : 
BREAK                : 56 57
CADENA1              : 13 28 29 30 86
CADENA2              : 87
CALLABLE             : 
CASE                 : 56
CATH                 : 
CLASS                : 
CLONE                : 
COLON                : 56 57 58
COMILLASDOBLES       : 
COMILLASIMPLE        : 
COMMA                : 18 19 21 23 25 26 28 29 33 97
CONST                : 
CONTINUE             : 
DECLARE              : 
DEFAULT              : 57
DEQUAL               : 74
DIE                  : 
DISTINT              : 75
DIVIDE               : 89
DO                   : 
DOLLAR               : 
DOT                  : 
ECHO                 : 12 13 14
ELSE                 : 53
ELSEIF               : 54
EMPTY                : 
ENDDECLARE           : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EQUAL                : 19 20 21 22 24 25 28 64
EVAL                 : 
EXIT                 : 
EXTENDS              : 
FINAL                : 
FINALLY              : 
FN                   : 
FOR                  : 60
FOREACH              : 61
FUNCTION             : 31
GLOBAL               : 
GOTO                 : 
GREATER              : 11 72
GREATEREQUAL         : 73
HASHTAG              : 
ID                   : 
IF                   : 52 53 54
IMPLEMENTS           : 
INCLUDE              : 
INCLUDE_ONCE         : 
INSTANCEOF           : 
INSTEADOF            : 
INTERFACE            : 
ISEQUAL              : 76
ISSET                : 
LBLOCK               : 38
LBRACKET             : 16 25 28 36 67
LESS                 : 10 70
LESSEQUAL            : 71
LIST                 : 
LPAREN               : 31 52 53 54 55 59 60 61 90 94
MATCH                : 
MINUS                : 83
MINUSEQUAL           : 
MINUSMINUS           : 79
MOD                  : 
NAMESPACE            : 
NEW                  : 
NUMBER               : 16 19 20 25 26 27 56 93
OR                   : 
PHP                  : 10
PLUS                 : 82
PLUSEQUAL            : 
PLUSPLUS             : 80
PRINT                : 
PRIVATE              : 
PROTECTED            : 
PUBLIC               : 
QUESTIONMARK         : 10 11 58
RBLOCK               : 38
RBRACKET             : 16 27 30 36 67
REQUIRE              : 
REQUIRE_ONCE         : 
RETURN               : 62 63
RPAREN               : 31 52 53 54 55 59 60 61 90 94
SEMICOLON            : 12 13 15 16 50 51 56 57 58 60 60 62 63
STATIC               : 
SWITCH               : 55
THIS                 : 
THROW                : 
TIMES                : 88
TRAIT                : 
TRY                  : 
UNSET                : 
USE                  : 
VAR                  : 
VARIABLE             : 16 17 18 19 20 21 21 22 22 24 24 25 28 35 36 58 58 66 67
VARIABLE2            : 31 94
WHILE                : 59
XOR                  : 
error                : 

Nonterminals, with rules where they appear

additive_expression  : 60 68 68 69 77
addop                : 77 81
args                 : 94
args_list            : 95 97
call                 : 92
compount_stmt        : 45
declaration          : 2 3
declaration_list     : 1 2
empty_function       : 37 40 43 96
expression           : 50 52 53 54 58 58 59 60 63 64 67 90 97 98
expression_stmt      : 9 44
factor               : 84 85
footer_declaration   : 1
fun_declaration      : 7
header_declaration   : 1
iteration_stmt       : 6 47
local_declarations   : 38
mulop                : 84
param                : 33 34
param_list           : 32 33
params               : 31
program              : 0
relop                : 58 68
return_stmt          : 49
selection_stmt       : 5 14 46
show_in_screen       : 8 48
simple_expression    : 24 65
statement            : 31 41 42 52 53 53 54 54 55 56 57 59 60 61
statement_list       : 38 41
term                 : 77 78 79 80 81 84
var_declaration      : 4 39
var_declaration2     : 15 18 19 21 25 26 28 29 60
var_val              : 12 55 61 61 64 91

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . header_declaration declaration_list footer_declaration
    (10) header_declaration -> . LESS QUESTIONMARK PHP

    LESS            shift and go to state 3

    program                        shift and go to state 1
    header_declaration             shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> header_declaration . declaration_list footer_declaration
    (2) declaration_list -> . declaration_list declaration
    (3) declaration_list -> . declaration
    (4) declaration -> . var_declaration
    (5) declaration -> . selection_stmt
    (6) declaration -> . iteration_stmt
    (7) declaration -> . fun_declaration
    (8) declaration -> . show_in_screen
    (9) declaration -> . expression_stmt
    (15) var_declaration -> . var_declaration2 SEMICOLON
    (16) var_declaration -> . VARIABLE LBRACKET NUMBER RBRACKET SEMICOLON
    (52) selection_stmt -> . IF LPAREN expression RPAREN statement
    (53) selection_stmt -> . IF LPAREN expression RPAREN statement ELSE statement
    (54) selection_stmt -> . IF LPAREN expression RPAREN statement ELSEIF statement
    (55) selection_stmt -> . SWITCH LPAREN var_val RPAREN statement
    (56) selection_stmt -> . CASE NUMBER COLON statement BREAK SEMICOLON
    (57) selection_stmt -> . DEFAULT COLON statement BREAK SEMICOLON
    (58) selection_stmt -> . VARIABLE relop VARIABLE QUESTIONMARK expression COLON expression SEMICOLON
    (59) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (60) iteration_stmt -> . FOR LPAREN var_declaration2 SEMICOLON expression SEMICOLON additive_expression RPAREN statement
    (61) iteration_stmt -> . FOREACH LPAREN var_val AS var_val RPAREN statement
    (31) fun_declaration -> . FUNCTION VARIABLE2 LPAREN params RPAREN statement
    (12) show_in_screen -> . ECHO var_val SEMICOLON
    (13) show_in_screen -> . ECHO CADENA1 SEMICOLON
    (14) show_in_screen -> . ECHO selection_stmt
    (50) expression_stmt -> . expression SEMICOLON
    (51) expression_stmt -> . SEMICOLON
    (17) var_declaration2 -> . VARIABLE
    (18) var_declaration2 -> . VARIABLE COMMA var_declaration2
    (19) var_declaration2 -> . VARIABLE EQUAL NUMBER COMMA var_declaration2
    (20) var_declaration2 -> . VARIABLE EQUAL NUMBER
    (21) var_declaration2 -> . VARIABLE EQUAL VARIABLE COMMA var_declaration2
    (22) var_declaration2 -> . VARIABLE EQUAL VARIABLE
    (23) var_declaration2 -> . COMMA
    (24) var_declaration2 -> . VARIABLE EQUAL VARIABLE simple_expression
    (25) var_declaration2 -> . VARIABLE EQUAL LBRACKET NUMBER COMMA var_declaration2
    (26) var_declaration2 -> . NUMBER COMMA var_declaration2
    (27) var_declaration2 -> . NUMBER RBRACKET
    (28) var_declaration2 -> . VARIABLE EQUAL LBRACKET CADENA1 COMMA var_declaration2
    (29) var_declaration2 -> . CADENA1 COMMA var_declaration2
    (30) var_declaration2 -> . CADENA1 RBRACKET
    (64) expression -> . var_val EQUAL expression
    (65) expression -> . simple_expression
    (66) var_val -> . VARIABLE
    (67) var_val -> . VARIABLE LBRACKET expression RBRACKET
    (68) simple_expression -> . additive_expression relop additive_expression
    (69) simple_expression -> . additive_expression
    (77) additive_expression -> . additive_expression addop term
    (78) additive_expression -> . term
    (79) additive_expression -> . term MINUSMINUS
    (80) additive_expression -> . term PLUSPLUS
    (81) additive_expression -> . addop term
    (84) term -> . term mulop factor
    (85) term -> . factor
    (86) term -> . CADENA1
    (87) term -> . CADENA2
    (82) addop -> . PLUS
    (83) addop -> . MINUS
    (90) factor -> . LPAREN expression RPAREN
    (91) factor -> . var_val
    (92) factor -> . call
    (93) factor -> . NUMBER
    (94) call -> . VARIABLE2 LPAREN args RPAREN

    VARIABLE        shift and go to state 14
    IF              shift and go to state 16
    SWITCH          shift and go to state 19
    CASE            shift and go to state 21
    DEFAULT         shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    FOREACH         shift and go to state 26
    FUNCTION        shift and go to state 27
    ECHO            shift and go to state 29
    SEMICOLON       shift and go to state 13
    COMMA           shift and go to state 31
    NUMBER          shift and go to state 15
    CADENA1         shift and go to state 30
    CADENA2         shift and go to state 36
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    LPAREN          shift and go to state 17
    VARIABLE2       shift and go to state 28

    declaration_list               shift and go to state 4
    declaration                    shift and go to state 5
    var_declaration                shift and go to state 6
    selection_stmt                 shift and go to state 7
    iteration_stmt                 shift and go to state 8
    fun_declaration                shift and go to state 9
    show_in_screen                 shift and go to state 10
    expression_stmt                shift and go to state 11
    var_declaration2               shift and go to state 12
    expression                     shift and go to state 18
    var_val                        shift and go to state 20
    additive_expression            shift and go to state 25
    simple_expression              shift and go to state 32
    addop                          shift and go to state 33
    term                           shift and go to state 34
    factor                         shift and go to state 35
    call                           shift and go to state 39

state 3

    (10) header_declaration -> LESS . QUESTIONMARK PHP

    QUESTIONMARK    shift and go to state 40


state 4

    (1) program -> header_declaration declaration_list . footer_declaration
    (2) declaration_list -> declaration_list . declaration
    (11) footer_declaration -> . QUESTIONMARK GREATER
    (4) declaration -> . var_declaration
    (5) declaration -> . selection_stmt
    (6) declaration -> . iteration_stmt
    (7) declaration -> . fun_declaration
    (8) declaration -> . show_in_screen
    (9) declaration -> . expression_stmt
    (15) var_declaration -> . var_declaration2 SEMICOLON
    (16) var_declaration -> . VARIABLE LBRACKET NUMBER RBRACKET SEMICOLON
    (52) selection_stmt -> . IF LPAREN expression RPAREN statement
    (53) selection_stmt -> . IF LPAREN expression RPAREN statement ELSE statement
    (54) selection_stmt -> . IF LPAREN expression RPAREN statement ELSEIF statement
    (55) selection_stmt -> . SWITCH LPAREN var_val RPAREN statement
    (56) selection_stmt -> . CASE NUMBER COLON statement BREAK SEMICOLON
    (57) selection_stmt -> . DEFAULT COLON statement BREAK SEMICOLON
    (58) selection_stmt -> . VARIABLE relop VARIABLE QUESTIONMARK expression COLON expression SEMICOLON
    (59) iteration_stmt -> . WHILE LPAREN expression RPAREN statement
    (60) iteration_stmt -> . FOR LPAREN var_declaration2 SEMICOLON expression SEMICOLON additive_expression RPAREN statement
    (61) iteration_stmt -> . FOREACH LPAREN var_val AS var_val RPAREN statement
    (31) fun_declaration -> . FUNCTION VARIABLE2 LPAREN params RPAREN statement
    (12) show_in_screen -> . ECHO var_val SEMICOLON
    (13) show_in_screen -> . ECHO CADENA1 SEMICOLON
    (14) show_in_screen -> . ECHO selection_stmt
    (50) expression_stmt -> . expression SEMICOLON
    (51) expression_stmt -> . SEMICOLON
    (17) var_declaration2 -> . VARIABLE
    (18) var_declaration2 -> . VARIABLE COMMA var_declaration2
    (19) var_declaration2 -> . VARIABLE EQUAL NUMBER COMMA var_declaration2
    (20) var_declaration2 -> . VARIABLE EQUAL NUMBER
    (21) var_declaration2 -> . VARIABLE EQUAL VARIABLE COMMA var_declaration2
    (22) var_declaration2 -> . VARIABLE EQUAL VARIABLE
    (23) var_declaration2 -> . COMMA
    (24) var_declaration2 -> . VARIABLE EQUAL VARIABLE simple_expression
    (25) var_declaration2 -> . VARIABLE EQUAL LBRACKET NUMBER COMMA var_declaration2
    (26) var_declaration2 -> . NUMBER COMMA var_declaration2
    (27) var_declaration2 -> . NUMBER RBRACKET
    (28) var_declaration2 -> . VARIABLE EQUAL LBRACKET CADENA1 COMMA var_declaration2
    (29) var_declaration2 -> . CADENA1 COMMA var_declaration2
    (30) var_declaration2 -> . CADENA1 RBRACKET
    (64) expression -> . var_val EQUAL expression
    (65) expression -> . simple_expression
    (66) var_val -> . VARIABLE
    (67) var_val -> . VARIABLE LBRACKET expression RBRACKET
    (68) simple_expression -> . additive_expression relop additive_expression
    (69) simple_expression -> . additive_expression
    (77) additive_expression -> . additive_expression addop term
    (78) additive_expression -> . term
    (79) additive_expression -> . term MINUSMINUS
    (80) additive_expression -> . term PLUSPLUS
    (81) additive_expression -> . addop term
    (84) term -> . term mulop factor
    (85) term -> . factor
    (86) term -> . CADENA1
    (87) term -> . CADENA2
    (82) addop -> . PLUS
    (83) addop -> . MINUS
    (90) factor -> . LPAREN expression RPAREN
    (91) factor -> . var_val
    (92) factor -> . call
    (93) factor -> . NUMBER
    (94) call -> . VARIABLE2 LPAREN args RPAREN

    QUESTIONMARK    shift and go to state 43
    VARIABLE        shift and go to state 14
    IF              shift and go to state 16
    SWITCH          shift and go to state 19
    CASE            shift and go to state 21
    DEFAULT         shift and go to state 22
    WHILE           shift and go to state 23
    FOR             shift and go to state 24
    FOREACH         shift and go to state 26
    FUNCTION        shift and go to state 27
    ECHO            shift and go to state 29
    SEMICOLON       shift and go to state 13
    COMMA           shift and go to state 31
    NUMBER          shift and go to state 15
    CADENA1         shift and go to state 30
    CADENA2         shift and go to state 36
    PLUS            shift and go to state 37
    MINUS           shift and go to state 38
    LPAREN          shift and go to state 17
    VARIABLE2       shift and go to state 28

    footer_declaration             shift and go to state 41
    declaration                    shift and go to state 42
    var_declaration                shift and go to state 6
    selection_stmt                 shift and go to state 7
    iteration_stmt                 shift and go to state 8
    fun_declaration                shift and go to state 9
    show_in_screen                 shift and go to state 10
    expression_stmt                shift and go to state 11
    var_declaration2               shift and go to state 12
    expression                     shift and go to state 18
    var_val                        shift and go to state 20
    additive_expression            shift and go to state 25
    simple_expression              shift and go to state 32
    addop                          shift and go to state 33
    term                           shift and go to state 34
    factor                         shift and go to state 35
    call                           shift and go to state 39

state 5

    (3) declaration_list -> declaration .

    QUESTIONMARK    reduce using rule 3 (declaration_list -> declaration .)
    VARIABLE        reduce using rule 3 (declaration_list -> declaration .)
    IF              reduce using rule 3 (declaration_list -> declaration .)
    SWITCH          reduce using rule 3 (declaration_list -> declaration .)
    CASE            reduce using rule 3 (declaration_list -> declaration .)
    DEFAULT         reduce using rule 3 (declaration_list -> declaration .)
    WHILE           reduce using rule 3 (declaration_list -> declaration .)
    FOR             reduce using rule 3 (declaration_list -> declaration .)
    FOREACH         reduce using rule 3 (declaration_list -> declaration .)
    FUNCTION        reduce using rule 3 (declaration_list -> declaration .)
    ECHO            reduce using rule 3 (declaration_list -> declaration .)
    SEMICOLON       reduce using rule 3 (declaration_list -> declaration .)
    COMMA           reduce using rule 3 (declaration_list -> declaration .)
    NUMBER          reduce using rule 3 (declaration_list -> declaration .)
    CADENA1         reduce using rule 3 (declaration_list -> declaration .)
    CADENA2         reduce using rule 3 (declaration_list -> declaration .)
    PLUS            reduce using rule 3 (declaration_list -> declaration .)
    MINUS           reduce using rule 3 (declaration_list -> declaration .)
    LPAREN          reduce using rule 3 (declaration_list -> declaration .)
    VARIABLE2       reduce using rule 3 (declaration_list -> declaration .)


state 6

    (4) declaration -> var_declaration .

    QUESTIONMARK    reduce using rule 4 (declaration -> var_declaration .)
    VARIABLE        reduce using rule 4 (declaration -> var_declaration .)
    IF              reduce using rule 4 (declaration -> var_declaration .)
    SWITCH          reduce using rule 4 (declaration -> var_declaration .)
    CASE            reduce using rule 4 (declaration -> var_declaration .)
    DEFAULT         reduce using rule 4 (declaration -> var_declaration .)
    WHILE           reduce using rule 4 (declaration -> var_declaration .)
    FOR             reduce using rule 4 (declaration -> var_declaration .)
    FOREACH         reduce using rule 4 (declaration -> var_declaration .)
    FUNCTION        reduce using rule 4 (declaration -> var_declaration .)
    ECHO            reduce using rule 4 (declaration -> var_declaration .)
    SEMICOLON       reduce using rule 4 (declaration -> var_declaration .)
    COMMA           reduce using rule 4 (declaration -> var_declaration .)
    NUMBER          reduce using rule 4 (declaration -> var_declaration .)
    CADENA1         reduce using rule 4 (declaration -> var_declaration .)
    CADENA2         reduce using rule 4 (declaration -> var_declaration .)
    PLUS            reduce using rule 4 (declaration -> var_declaration .)
    MINUS           reduce using rule 4 (declaration -> var_declaration .)
    LPAREN          reduce using rule 4 (declaration -> var_declaration .)
    VARIABLE2       reduce using rule 4 (declaration -> var_declaration .)


state 7

    (5) declaration -> selection_stmt .

    QUESTIONMARK    reduce using rule 5 (declaration -> selection_stmt .)
    VARIABLE        reduce using rule 5 (declaration -> selection_stmt .)
    IF              reduce using rule 5 (declaration -> selection_stmt .)
    SWITCH          reduce using rule 5 (declaration -> selection_stmt .)
    CASE            reduce using rule 5 (declaration -> selection_stmt .)
    DEFAULT         reduce using rule 5 (declaration -> selection_stmt .)
    WHILE           reduce using rule 5 (declaration -> selection_stmt .)
    FOR             reduce using rule 5 (declaration -> selection_stmt .)
    FOREACH         reduce using rule 5 (declaration -> selection_stmt .)
    FUNCTION        reduce using rule 5 (declaration -> selection_stmt .)
    ECHO            reduce using rule 5 (declaration -> selection_stmt .)
    SEMICOLON       reduce using rule 5 (declaration -> selection_stmt .)
    COMMA           reduce using rule 5 (declaration -> selection_stmt .)
    NUMBER          reduce using rule 5 (declaration -> selection_stmt .)
    CADENA1         reduce using rule 5 (declaration -> selection_stmt .)
    CADENA2         reduce using rule 5 (declaration -> selection_stmt .)
    PLUS            reduce using rule 5 (declaration -> selection_stmt .)
    MINUS           reduce using rule 5 (declaration -> selection_stmt .)
    LPAREN          reduce using rule 5 (declaration -> selection_stmt .)
    VARIABLE2       reduce using rule 5 (declaration -> selection_stmt .)


state 8

    (6) declaration -> iteration_stmt .
